--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Toolbox</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <!-- CSS is imported in app.js -->
 </head>
+
 <body>
 
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Image Toolbox</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -24,16 +26,23 @@
                     <li class="nav-item"><a class="nav-link" href="#" data-tool="rotate">Rotate & Flip</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" data-tool="filters">Filters</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" data-tool="text-overlay">Text Overlay</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#" data-tool="color-adjustments">Color Adjustments</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" data-tool="color-adjustments">Color
+                            Adjustments</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" data-tool="bulk-resize">Bulk Resize</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" data-tool="compress">Compress</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" data-tool="base64">Base64</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" data-tool="meme">Meme Generator</a></li>
+                    <li class="nav-item border-top mt-2 pt-2"><a class="nav-link" href="#" data-tool="help">❓ Help /
+                            How-To</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
+    <!-- Main Content Container -->
     <div class="container mt-4">
         <div id="tool-container">
-            <!-- Resize Tool -->
+            <!-- Resize Tool Section -->
             <div id="resize-tool" class="tool-container">
                 <h3>Resize Image</h3>
                 <div class="mb-3 drop-area">
@@ -42,7 +51,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <img id="image-preview-resize" class="img-fluid"/>
+                        <img id="image-preview-resize" class="img-fluid" />
                     </div>
                     <div class="col-md-6">
                         <canvas id="resize-preview-canvas" class="img-fluid"></canvas>
@@ -70,14 +79,14 @@
                 </div>
             </div>
 
-            <!-- Convert Tool -->
+            <!-- Convert Tool Section -->
             <div id="convert-tool" class="tool-container">
                 <h3>Convert Image Format</h3>
                 <div class="mb-3 drop-area">
                     <label for="file-input-convert" class="form-label">Select an image (or drop it here)</label>
                     <input class="form-control" type="file" id="file-input-convert" accept="image/*">
                 </div>
-                <img id="image-preview-convert" class="img-fluid mt-3"/>
+                <img id="image-preview-convert" class="img-fluid mt-3" />
                 <div class="mb-3 mt-3">
                     <label for="format-select" class="form-label">Convert to:</label>
                     <select class="form-select" id="format-select">
@@ -92,7 +101,7 @@
                 </div>
             </div>
 
-            <!-- Crop Tool -->
+            <!-- Crop Tool Section -->
             <div id="crop-tool" class="tool-container">
                 <h3>Crop Image</h3>
                 <div class="mb-3 drop-area">
@@ -108,7 +117,7 @@
                 </div>
             </div>
 
-            <!-- Rotate & Flip Tool -->
+            <!-- Rotate & Flip Tool Section -->
             <div id="rotate-tool" class="tool-container">
                 <h3>Rotate & Flip Image</h3>
                 <div class="mb-3 drop-area">
@@ -127,7 +136,7 @@
                 </div>
             </div>
 
-            <!-- Filters Tool -->
+            <!-- Filters Tool Section -->
             <div id="filters-tool" class="tool-container">
                 <h3>Image Filters</h3>
                 <div class="mb-3 drop-area">
@@ -146,7 +155,7 @@
                 </div>
             </div>
 
-            <!-- Text Overlay Tool -->
+            <!-- Text Overlay Tool Section -->
             <div id="text-overlay-tool" class="tool-container">
                 <h3>Add Text Overlay</h3>
                 <div class="mb-3 drop-area">
@@ -184,45 +193,52 @@
                 </div>
             </div>
 
-            <!-- Color Adjustments Tool -->
+            <!-- Color Adjustments Tool Section -->
             <div id="color-adjustments-tool" class="tool-container">
                 <h3>Adjust Colors</h3>
                 <div class="mb-3 drop-area">
-                    <label for="file-input-color-adjustments" class="form-label">Select an image (or drop it here)</label>
+                    <label for="file-input-color-adjustments" class="form-label">Select an image (or drop it
+                        here)</label>
                     <input class="form-control" type="file" id="file-input-color-adjustments" accept="image/*">
                 </div>
                 <canvas id="canvas-color-adjustments" class="mt-3 img-fluid"></canvas>
                 <div class="row mt-3">
                     <div class="col-md-6">
-                        <label for="brightness-range" class="form-label">Brightness: <span id="brightness-value">100%</span></label>
+                        <label for="brightness-range" class="form-label">Brightness: <span
+                                id="brightness-value">100%</span></label>
                         <input type="range" class="form-range" id="brightness-range" min="0" max="200" value="100">
                     </div>
                     <div class="col-md-6">
-                        <label for="contrast-range" class="form-label">Contrast: <span id="contrast-value">100%</span></label>
+                        <label for="contrast-range" class="form-label">Contrast: <span
+                                id="contrast-value">100%</span></label>
                         <input type="range" class="form-range" id="contrast-range" min="0" max="200" value="100">
                     </div>
                 </div>
                 <div class="row mt-3">
                     <div class="col-md-6">
-                        <label for="saturation-range" class="form-label">Saturation: <span id="saturation-value">100%</span></label>
+                        <label for="saturation-range" class="form-label">Saturation: <span
+                                id="saturation-value">100%</span></label>
                         <input type="range" class="form-range" id="saturation-range" min="0" max="200" value="100">
                     </div>
                     <div class="col-md-6">
-                        <label for="hue-rotate-range" class="form-label">Hue Rotate: <span id="hue-rotate-value">0deg</span></label>
+                        <label for="hue-rotate-range" class="form-label">Hue Rotate: <span
+                                id="hue-rotate-value">0deg</span></label>
                         <input type="range" class="form-range" id="hue-rotate-range" min="0" max="360" value="0">
                     </div>
                 </div>
                 <div class="mt-3">
                     <button id="reset-color-adjustments-btn" class="btn btn-secondary">Reset</button>
-                    <a id="download-btn-color-adjustments" class="btn btn-success" style="display: none;">Download Image</a>
+                    <a id="download-btn-color-adjustments" class="btn btn-success" style="display: none;">Download
+                        Image</a>
                 </div>
             </div>
 
-            <!-- Bulk Resize Tool -->
+            <!-- Bulk Resize Tool Section -->
             <div id="bulk-resize-tool" class="tool-container">
                 <h3>Bulk Resize Images</h3>
                 <div class="mb-3 drop-area">
-                    <label for="file-input-bulk-resize" class="form-label">Select multiple images (or drop them here)</label>
+                    <label for="file-input-bulk-resize" class="form-label">Select multiple images (or drop them
+                        here)</label>
                     <input class="form-control" type="file" id="file-input-bulk-resize" accept="image/*" multiple>
                 </div>
                 <div class="row mt-3">
@@ -246,20 +262,161 @@
                 </div>
                 <div id="bulk-download-area" class="mt-3 row"></div>
             </div>
+            <!-- Compressor Tool Section -->
+            <div id="compress-tool" class="tool-container">
+                <h3>Compress Image</h3>
+                <div class="mb-3 drop-area">
+                    <label for="file-input-compress" class="form-label">Select an image (or drop it here)</label>
+                    <input class="form-control" type="file" id="file-input-compress"
+                        accept="image/jpeg,image/png,image/webp">
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h5>Original</h5>
+                        <img id="image-preview-compress-original" class="img-fluid mb-2">
+                        <p>Size: <span id="compress-original-size">0 KB</span></p>
+                    </div>
+                    <div class="col-md-6">
+                        <h5>Compressed</h5>
+                        <img id="image-preview-compress-result" class="img-fluid mb-2">
+                        <p>Size: <span id="compress-result-size">0 KB</span></p>
+                    </div>
+                </div>
+                <div class="mt-3">
+                    <label for="compress-quality" class="form-label">Quality: <span
+                            id="compress-quality-value">80</span>%</label>
+                    <input type="range" class="form-range" id="compress-quality" min="0" max="100" value="80">
+                </div>
+                <div class="mt-3">
+                    <a id="download-btn-compress" class="btn btn-success" style="display: none;">Download Compressed
+                        Image</a>
+                </div>
+            </div>
+
+            <!-- Base64 Tool Section -->
+            <div id="base64-tool" class="tool-container">
+                <h3>Base64 Converter</h3>
+                <ul class="nav nav-tabs mb-3" id="base64-tabs" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="image-to-base64-tab" data-bs-toggle="tab"
+                            data-bs-target="#image-to-base64-pane" type="button" role="tab">Image to Base64</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="base64-to-image-tab" data-bs-toggle="tab"
+                            data-bs-target="#base64-to-image-pane" type="button" role="tab">Base64 to Image</button>
+                    </li>
+                </ul>
+                <div class="tab-content" id="base64-content">
+                    <div class="tab-pane fade show active" id="image-to-base64-pane" role="tabpanel">
+                        <div class="mb-3 drop-area">
+                            <label for="file-input-base64" class="form-label">Select an image</label>
+                            <input class="form-control" type="file" id="file-input-base64" accept="image/*">
+                        </div>
+                        <div class="mb-3">
+                            <label for="base64-output" class="form-label">Base64 String</label>
+                            <textarea class="form-control" id="base64-output" rows="5" readonly></textarea>
+                        </div>
+                        <button id="copy-base64-btn" class="btn btn-primary">Copy to Clipboard</button>
+                    </div>
+                    <div class="tab-pane fade" id="base64-to-image-pane" role="tabpanel">
+                        <div class="mb-3">
+                            <label for="base64-input" class="form-label">Paste Base64 String here</label>
+                            <textarea class="form-control" id="base64-input" rows="5"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <button id="show-image-btn" class="btn btn-primary">Show Image</button>
+                        </div>
+                        <img id="image-preview-base64" class="img-fluid">
+                        <div class="mt-3">
+                            <a id="download-btn-base64" class="btn btn-success" style="display: none;">Download
+                                Image</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Meme Generator Tool Section -->
+            <div id="meme-tool" class="tool-container">
+                <h3>Meme Generator</h3>
+                <div class="mb-3 drop-area">
+                    <label for="file-input-meme" class="form-label">Select an image (or drop it here)</label>
+                    <input class="form-control" type="file" id="file-input-meme" accept="image/*">
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <canvas id="canvas-meme" class="img-fluid border"></canvas>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <label for="meme-top-text" class="form-label">Top Text</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" id="meme-top-text" placeholder="TOP TEXT">
+                                <input type="color" class="form-control form-control-color" id="meme-top-color"
+                                    value="#ffffff" title="Choose text color">
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="meme-bottom-text" class="form-label">Bottom Text</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" id="meme-bottom-text" placeholder="BOTTOM TEXT">
+                                <input type="color" class="form-control form-control-color" id="meme-bottom-color"
+                                    value="#ffffff" title="Choose text color">
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="meme-font-size" class="form-label">Font Size</label>
+                            <input type="range" class="form-range" id="meme-font-size" min="10" max="100" value="40">
+                        </div>
+                        <button id="generate-meme-btn" class="btn btn-primary">Update Meme</button>
+                        <div class="mt-3">
+                            <a id="download-btn-meme" class="btn btn-success" style="display: none;">Download Meme</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Help / How-Tool Section -->
+            <div id="help-tool" class="tool-container">
+                <h3>❓ Help / How-To</h3>
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Welcome to 1ps Image Toolbox!</h5>
+                        <p class="card-text">
+                            <strong>Absolute Privacy:</strong> All image processing takes place entirely within your
+                            browser.
+                            Your photos are <em>never</em> uploaded to any server.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <h5>💡 Quick Start</h5>
+                        <ul class="list-group mb-3">
+                            <li class="list-group-item">Select a tool from the sidebar menu.</li>
+                            <li class="list-group-item">Drag &amp; Drop an image into the dashed area (or click to
+                                browse).</li>
+                            <li class="list-group-item">Adjust settings and see real-time previews.</li>
+                            <li class="list-group-item">Click <strong>Download</strong> to save your result.</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <h5>🛠️ Tools Overview</h5>
+                        <ul>
+                            <li><strong>Resize:</strong> Change dimensions.</li>
+                            <li><strong>Convert:</strong> Switch between JPG, PNG, WEBP.</li>
+                            <li><strong>Compress:</strong> Reduce file size.</li>
+                            <li><strong>Meme Gen:</strong> Add text to images.</li>
+                            <li><strong>Base64:</strong> Developer utilities.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/drag-and-drop.js"></script>
-    <script src="js/resizer.js"></script>
-    <script src="js/converter.js"></script>
-    <script src="js/cropper.js"></script>
-    <script src="js/rotate.js"></script>
-    <script src="js/filters.js"></script>
-    <script src="js/text-overlay.js"></script>
-    <script src="js/color-adjustments.js"></script>
-    <script src="js/bulk-resize.js"></script>
+    <!-- Main application logic -->
+    <script type="module" src="/js/app.js"></script>
 </body>
+
 </html>
